# ZipCpp

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  README.md  conanfile.txt
Source/: CMakeLists.txt
Source/ZipCpp/: CMakeLists.txt  ZipCppConfig.cmake.in
Source/ZipCpp/include/ZipCpp/: memorybuffer.h  memorystream.h  zipcompression.h  zipcpp.h  zipcpp_flags.hpp
Source/ZipCpp/src/: memorybuffer.cpp  memorystream.cpp  zipcompression.cpp  zipcpp.cpp
cmake/: Sanitizers.cmake  lint.cmake
test/: CMakeLists.txt
test/TestData/: CMakeLists.txt  get_file_path.hpp.in
test/src/: test_read_zip.cpp  test_write_zip.cpp  utils.cpp  utils.h
